--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "testing_app",
-    "short_name": "testing_app",
+    "name": "Wildtierarten & Jagdhunde",
+    "short_name": "Jagdschule",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
